[package]
name = "advent_of_code"
version = "0.9.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[features]
test_lib = []

[dependencies]
nom = "7.1.3"
num = "0.4.1"
pest = "2.7.5"
pest_derive = "2.7.5"
pico-args = "0.5.0"
rayon = "1.8.0"
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.3"
